[package]
name = "cli_exp"
version = "0.1.0"
authors = ["Federico Razzoli <hello@federico-razzoli.com>"]

[[bin]]
name = "reducer_day"
path = "src/bin/reducer_day.rs"

[[bin]]
name = "mapper_day"
path = "src/bin/mapper_day.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
clap = "2.33.1"
