[package]
name = "cli_exp"
version = "0.1.0"
authors = ["Federico Razzoli <hello@federico-razzoli.com>"]

[[bin]]
name = "reducer_day"
path = "src/bin/reducer_day.rs"

[[bin]]
name = "mapper_day"
path = "src/bin/mapper_day.rs"

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
console = "0.11.3"
rand = "0.7.3"

[dependencies.clap]
version = "2.33.1"
default-features = false
features = [ "wrap_help" ]
